# rustdesk-console

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yaml
.github/workflows/: build.yml
conf/: config.yaml
conf/admin/: hello.html
crates/entity/: Cargo.toml
crates/entity/src/: active_connection.rs  address_book.rs  address_book_collection.rs  address_book_collection_rule.rs  audit_conn.rs  audit_file.rs  datetime.rs  deployment_event.rs  deployment_token.rs  device_group.rs  device_presence_state.rs  group.rs  lib.rs  login_log.rs  login_verification.rs  message.rs  message_read.rs  oauth.rs  peer.rs  record_file.rs  server_cmd.rs  share_record.rs  smtp_email_config.rs  strategy.rs  strategy_assignment.rs  system_setting.rs  tag.rs  trusted_login_device.rs  user.rs  user_third.rs  user_token.rs  version.rs  webhook_delivery.rs  webhook_subscription.rs
crates/rustdesk-client-config/: Cargo.toml
crates/rustdesk-client-config/src/: lib.rs
crates/rustdesk-server-control/: Cargo.toml
crates/rustdesk-server-control/src/: lib.rs
crates/rustdesk-uri/: Cargo.toml
crates/rustdesk-uri/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: assets.rs  bootstrap.rs  config.rs  error.rs  i18n.rs  logging.rs  main.rs  state.rs
crates/server/src/http/: admin.rs  api.rs  file.rs  middleware.rs  mod.rs  my.rs  oauth.rs  observability.rs  payloads.rs  pro_api.rs  response.rs  router.rs  static_files.rs
crates/server/src/services/: active_connection.rs  address_book.rs  audit.rs  deployment.rs  diagnostics.rs  group.rs  ldap.rs  login_log.rs  login_security.rs  message.rs  mod.rs  oauth.rs  overview.rs  peer.rs  record_file.rs  record_storage.rs  server_cmd.rs  share_record.rs  strategy.rs  tag.rs  user.rs  webhook.rs
crates/server/src/support/: admin_config.rs  deployment_config.rs  disconnect_store.rs  external_webclient.rs  jwt.rs  login_limiter.rs  mod.rs  oauth_cache.rs  oss.rs  password.rs  random.rs  record_storage_config.rs  webclient_config.rs
docs/: rustdesk-client-http-api-contract.md
docs/superpowers/plans/: 2026-06-17-rustdesk-client-api-deployment-compat.md  2026-07-17-admin-console-responsive-ui-ux.md
docs/superpowers/specs/: 2026-06-17-rustdesk-console-fleet-policy-pro-compat-design.md  2026-07-17-admin-console-responsive-ui-ux-design.md
resources/admin/: README.txt
resources/i18n/: en.toml  zh_CN.toml  zh_TW.toml
resources/web/js/src/: connection.ts
web/: .npmrc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  AuthenticatedApp.tsx  i18n.ts  main.tsx  styles.css
web/src/components/: ActiveConnectionActions.tsx  AppShell.tsx  AvatarPreview.tsx  ConfirmDialog.tsx  DeploymentTokenActions.tsx  DialogLayout.tsx  InlineMessage.tsx  OAuthProviderActions.tsx  OAuthProviderBadge.tsx  PeerInfoDrawer.tsx  PeerQuickActions.tsx  RecordFileActions.tsx  TableState.tsx  UserSecurityActions.tsx  WebClientActions.tsx
web/src/lib/: adminTitle.ts  api.ts  auth.ts  dateFormat.ts  rustdeskLinks.ts  theme.ts
web/src/pages/: DiagnosticsPage.tsx  ForceChangePasswordPage.tsx  LoginPage.tsx  MessageCenterPage.tsx  MyProfilePage.tsx  NotificationRoutingPage.tsx  OAuthActionPage.tsx  OverviewPage.tsx  PlaceholderPage.tsx  RegisterPage.tsx  ServerCommandsPage.tsx  SystemSettingsPage.tsx  UsersPage.tsx  WebClientSettingsPage.tsx
web/src/resource/: ResourcePage.tsx  registry.tsx  strategyOptions.tsx  types.ts
