[workspace]
resolver = "2"
members = [
    "crates/entity",
    "crates/rustdesk-client-config",
    "crates/rustdesk-server-control",
    "crates/rustdesk-uri",
    "crates/server",
]

[workspace.package]
version = "0.2.20"
edition = "2021"
license = "MIT"
repository = "https://github.com/czyt/rustdesk-console"
description = "RustDesk API server, rewritten in Rust (axum + SeaORM)"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Web
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
# ORM
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlx-mysql",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
] }
# Migration is done at runtime via Schema::create_table_from_entity (≈ GORM AutoMigrate).
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Config
config = { version = "0.14", default-features = false, features = ["yaml"] }
# Auth / crypto
jsonwebtoken = "9"
bcrypt = "0.15"
md-5 = "0.10"
hmac = "0.12"
sha1 = "0.10"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Misc
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
rust-embed = { version = "8", features = ["mime-guess", "interpolate-folder-path", "include-exclude"] }
mime_guess = "2"
captcha = "0.0.9"
base64 = "0.22"
toml = "0.8"
async-trait = "0.1"
# OAuth/OIDC login (manual flow over rustls) + LDAP — external integrations.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }
urlencoding = "2"
url = "2"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "rustls-tls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
