[package]
name = "rustdesk-client-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
name = "rustdesk_client_config"
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
