[package]
name = "rustdesk-console"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
default-run = "rustdesk-console"

[[bin]]
name = "rustdesk-console"
path = "src/main.rs"

[dependencies]
entity = { path = "../entity" }
rustdesk-client-config = { path = "../rustdesk-client-config" }
rustdesk-server-control = { path = "../rustdesk-server-control" }
rustdesk-uri = { path = "../rustdesk-uri" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
md-5 = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
captcha = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
ldap3 = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
lettre = { workspace = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
rsa = "0.9.10"
